# image_to_insurance

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
api/: database.py  init.sql  main.py
api/image_to_list/: pyproject.toml
api/image_to_list/image_to_list/: test.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: LandingPage.jsx  Login.jsx  Photos.jsx  Processing.jsx  Register.jsx  Results.jsx  SessionProvider.jsx
frontend/src/components/landing-page/: Login.jsx
image_to_list/image_to_list/: test.py
